force-app/main/default/objects/Contact/fields/Address_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Address_Timezone__c</fullName>
    <description>Timezone resolved from geocoded address coordinates.</description>
    <inlineHelpText>Timezone from address latitude/longitude lookup.</inlineHelpText>
    <label>Address Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>