force-app/main/default/objects/Contact/fields/Address_Timezone_Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Address_Timezone_Abbreviation__c</fullName>
    <description>Abbreviation returned from timezone provider (for example, CST/CDT).</description>
    <inlineHelpText>Timezone abbreviation from address lookup provider.</inlineHelpText>
    <label>Address Timezone Abbreviation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>