force-app/main/default/objects/Contact/fields/Address_UTC_Offset_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Address_UTC_Offset_Seconds__c</fullName>
    <description>UTC offset in seconds returned by address timezone lookup.</description>
    <inlineHelpText>UTC offset in seconds returned by timezone provider.</inlineHelpText>
    <label>Address UTC Offset Seconds</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>