force-app/main/default/objects/Contact/fields/Browser_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Browser_Timezone__c</fullName>
    <description>Browser-reported timezone in IANA format (for example, America/Chicago).</description>
    <inlineHelpText>IANA timezone captured from browser.</inlineHelpText>
    <label>Browser Timezone</label>
    <length>80</length>
    <type>Text</type>
</CustomField>