force-app/main/default/objects/Contact/fields/Browser_UTC_Offset_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Browser_UTC_Offset_Minutes__c</fullName>
    <description>UTC offset in minutes from browser locale at capture time.</description>
    <inlineHelpText>UTC offset in minutes based on browser timezone settings.</inlineHelpText>
    <label>Browser UTC Offset Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>