force-app/main/default/objects/Contact/fields/Timezone_Source__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Source__c</fullName>
    <description>Source used to populate timezone values on Contact.</description>
    <inlineHelpText>Browser, Address, or Manual source marker for timezone values.</inlineHelpText>
    <label>Timezone Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Browser</fullName>
            </value>
            <value>
                <fullName>Address</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>